# road-drawing

./: .coderabbit.yaml  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MIGRATION.md  PLAN.md  SUMMARY.md  TESTING.md  index.html  road-drawing-web-a34c82edbc204932.js  road-drawing-web-a34c82edbc204932_bg.wasm
.claude/agents/: dxf-reviewer.md  plan-reviewer.md  test-reviewer.md
.claude/projects/C--Users-yuuji-road-drawing/: memory_test_naming.md
.claude/skills/plan-and-review/: SKILL.md
.claude/skills/team-impl/: SKILL.md
.claude/skills/team-review-fix/: SKILL.md
.github/workflows/: deploy.yml  pages.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_test.rs  fixture_validation_test.rs
crates/dxf-engine/: Cargo.toml  README.md
crates/dxf-engine/src/: lib.rs
crates/dxf-engine/src/dxf/: comparator.rs  entities.rs  handle.rs  index.rs  linter.rs  mod.rs  reader.rs  writer.rs
crates/dxf-engine/tests/: compat_test.rs  golden_lint_test.rs
crates/dxf-engine/tests/golden/: road_section_simple.dxf  simple_3lines.dxf
crates/excel-parser/: Cargo.toml  README.md
crates/excel-parser/src/: distance.rs  lib.rs  section_detector.rs  station_name.rs  transform.rs
crates/excel-parser/tests/: calamine_test.rs  real_file_test.rs  stress_test.rs
crates/file-watcher/: Cargo.toml
crates/file-watcher/src/: lib.rs
crates/road-drawing-wasm/: Cargo.toml  build.sh
crates/road-drawing-wasm/src/: lib.rs
crates/road-drawing-wasm/tests/: wasm_bridge_test.rs  wasm_js_interop_test.mjs  window_global_pattern_test.mjs
crates/road-marking/: Cargo.toml  README.md
crates/road-marking/src/: command.rs  crosswalk.rs  lib.rs
crates/road-section/: Cargo.toml  README.md
crates/road-section/src/: lib.rs
crates/road-section/tests/: e2e_test.rs
crates/triangle-core/: Cargo.toml  README.md
crates/triangle-core/src/: connection.rs  csv_loader.rs  lib.rs  triangle.rs
crates/triangle-core/tests/: integration_test.rs  property_test.rs
docs/: editor-research.md  egui-grid-research.md  flutter-migration-plan.md
flutter_web/: README.md  pubspec.yaml
flutter_web/lib/: app.dart  main.dart  wasm_bridge.dart  wasm_bridge_stub.dart  wasm_bridge_web.dart
flutter_web/lib/models/: preview_data.dart  station_data.dart
flutter_web/lib/services/: drop_handler.dart  drop_handler_stub.dart  drop_handler_web.dart  dxf_service.dart  file_download_stub.dart  file_download_web.dart  preview_fallback.dart
flutter_web/lib/widgets/: dxf_preview.dart  grid_editor.dart  toolbar.dart
flutter_web/test/: app_test.dart
flutter_web/test/models/: preview_data_test.dart  station_data_test.dart
flutter_web/test/services/: csv_to_dxf_pipeline_test.dart  preview_fallback_test.dart
flutter_web/test/widgets/: dxf_preview_test.dart  grid_editor_test.dart  toolbar_test.dart
flutter_web/web/: index.html  manifest.json
tests/: TEST_AUDIT.md
tests/fixtures/marking/: crosswalk.json
tests/fixtures/road-section/: data.csv  multi_section.csv  区間1.csv  区間3.csv  区間5.csv  区間6.csv
tests/fixtures/triangle/: 4.11.csv  connected.csv  minimal.csv
tools/dxf-viewer/: Cargo.toml
tools/dxf-viewer/src/: main.rs
web/: Cargo.toml  Trunk.toml  index.html
web/src/: app.rs  dxf_export.rs  dxf_viewer.rs  grid_data.rs  lib.rs  renderer.rs
web/tests/: e2e_pipeline_test.rs  hotswap_test.rs
