[workspace]
members = [
    "crates/dxf-engine",
    "crates/road-section",
    "crates/excel-parser",
    "crates/triangle-core",
    "crates/road-marking",
    "cli",
    "web",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["YuujiKamura"]
repository = "https://github.com/YuujiKamura/road-drawing"
