[workspace]
members = [
    "crates/dxf-engine",
    "crates/road-section",
    "crates/excel-parser",
    "crates/triangle-core",
    "crates/road-marking",
    "crates/file-watcher",
    "crates/road-drawing-wasm",
    "cli",
    "web",
    "tools/dxf-viewer",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["YuujiKamura"]
repository = "https://github.com/YuujiKamura/road-drawing"
homepage = "https://github.com/YuujiKamura/road-drawing"
