[package]
name = "road-drawing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool for generating road section drawings from CSV/Excel"

[[bin]]
name = "road-drawing"
path = "src/main.rs"

[dependencies]
dxf-engine = { path = "../crates/dxf-engine" }
road-section = { path = "../crates/road-section" }
clap = { version = "4", features = ["derive"] }
