[package]
name = "road-drawing-web"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Road drawing diagram viewer - Web version with egui"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# GUI Framework
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
]}
egui = "0.29"

# Logging
log = "0.4"

# WebAssembly bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Browser APIs
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "Url",
    "Blob",
    "BlobPropertyBag",
    "HtmlAnchorElement",
]}
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Encoding conversion (Shift-JIS CSV)
encoding_rs = "0.8"

# Console error handling for wasm
console_error_panic_hook = "0.1"

# Internal crates
dxf-engine = { path = "../crates/dxf-engine" }
road-section = { path = "../crates/road-section" }
excel-parser = { path = "../crates/excel-parser" }
triangle-core = { path = "../crates/triangle-core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
notify = "7"

[[bin]]
name = "dxf-viewer"
path = "src/bin/dxf_viewer.rs"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0"
