[package]
name = "dxf-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "DXF file generation and validation library"
readme = "README.md"
keywords = ["dxf", "cad", "drawing", "geometry", "engineering"]
categories = ["graphics", "parser-implementations"]

[lib]
name = "dxf_engine"
path = "src/lib.rs"

[dependencies]
