[package]
name = "road-drawing-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
road-section = { path = "../road-section" }
dxf-engine = { path = "../dxf-engine" }
excel-parser = { path = "../excel-parser" }

[dev-dependencies]
serde_json = "1.0"
