[package]
name = "road-marking"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Road marking generation: crosswalks, stop lines, centerline markings"
readme = "README.md"
keywords = ["road", "marking", "crosswalk", "civil-engineering", "dxf"]
categories = ["science", "graphics"]

[lib]
name = "road_marking"
path = "src/lib.rs"

[dependencies]
dxf-engine = { path = "../dxf-engine" }
