[package]
name = "road-section"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Road section (面積展開図) geometry calculation and DXF generation"
readme = "README.md"
keywords = ["road", "cross-section", "civil-engineering", "dxf", "surveying"]
categories = ["science", "graphics"]

[dependencies]
dxf-engine = { path = "../dxf-engine" }
