[package]
name = "triangle-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Triangle list geometry calculation engine for area measurement drawings"

[lib]
name = "triangle_core"
path = "src/lib.rs"

[dependencies]
dxf-engine = { path = "../dxf-engine" }
