[package]
name = "triangle-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Triangle list geometry calculation engine for area measurement drawings"
readme = "README.md"
keywords = ["triangle", "geometry", "area", "heron", "surveying"]
categories = ["mathematics", "science"]

[lib]
name = "triangle_core"
path = "src/lib.rs"

[dependencies]
dxf-engine = { path = "../dxf-engine" }
