[package]
name = "dxf-viewer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DXF hot-swap viewer — watches and auto-reloads DXF files"

[[bin]]
name = "dxf-viewer"
path = "src/main.rs"

[dependencies]
road-drawing-web = { path = "../../web" }
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
]}
egui = "0.29"
env_logger = "0.11"
